EU/UK 점검 중 수정사항 반영

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/applied_model_popup_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/applied_model_popup_list.html
@@ -60,7 +60,7 @@
 				{data: "SPART", 	title: "SPART"	}			
 			],
 			columnDefs: [
-				{targets: [0, 1], className: 'dt-body-center'},
+				{targets: [0], className: 'dt-body-center'},
 				{targets: [2, 3, 4, 5], visible: false}
 			],
 			ajax: {
