--- a/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -37,7 +37,7 @@
 					<div class="description">
 						Doosan is preparing for the future for the better life of mankind<br />all over the world.
 					</div>
-					<button id="BTN_goOrder" class="order-button" sec:authorize="!hasRole('ROLE_EU_SS_READ-ONLY_DEALER')">
+					<button id="BTN_goOrder" class="order-button">
 						<span th:text="#{HQP_B_ORDER}"></span>
 					</button>
 				</div>
