--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
@@ -63,7 +63,7 @@ $(function(){
 			{data: "SPART", 	title: "SPART"	}			
 		],
 		columnDefs: [
-			{targets: [0, 1], className: 'dt-body-center'},
+			{targets: [0], className: 'dt-body-center'},
 			{targets: [2, 3, 4, 5], visible: false}
 		],
 		ajax: {
