--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/gnb.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/gnb.css
@@ -8,7 +8,7 @@
 .gnb-container {
 	width: 100%;
 	top: 0px;
-	z-index: 20;
+	/* z-index: 20; */
 	min-width: 1300px;
 }
 .gnb-menu-area {
@@ -23,7 +23,7 @@
 	border-radius: 5px;
 	background: rgba(0, 48, 130, 0.8);
 	position: relative;
-	z-index: 9999;
+	/* z-index: 9999; */
 }
 .gnb-menu-list {
 	/*
