플랫폼 영역 개발 - SAP Connection Resource, User Group, Credentials Policy

--- a/src/main/resources/templates/platform/mgmt/conn_resource/list.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/list.html
@@ -97,7 +97,7 @@ $(document).ready(function() {
 		};
 		
 		JpUiPopup.open({
-			url: "/platform/mgmt/conn_resource/write?scrSeq=" + JpUtilsString.trimToEmpty(checkedValues[0]) + "&type=copy"
+			url: "/platform/mgmt/conn_resource/write?scrSeq=" + JpUtilsString.trimToEmpty(checkedValues[0]) + "&mode=copy"
 		});
 	});
 	
