--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -30,6 +30,7 @@
 <div class="ui one column grid">
 	<div class="column">
 		<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
+		<div id="BTN_copyToCreate" class="ui teal button"><i class="copy outline icon"></i> Copy To Create</div>
 		<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
@@ -111,6 +112,27 @@ $(document).ready(function() {
 	$("#BTN_new").on("click", function() {
 		goWrite();
 	});
+	
+	$("#BTN_copyToCreate").on("click", function() {
+		let checkedValues = listTable.getCheckedValues();
+		let length = checkedValues.length; 
+		
+		if (length == 0)
+		{
+			JpUiDimmer.alert("Please choose a target.");
+			return;
+		};		
+
+		if (length > 1)
+		{
+			JpUiDimmer.alert("Please choose one.");
+			return;
+		};
+		
+		JpUiPopup.open({
+			url: "/platform/mgmt/user/credentials/policy/write?cpSeq=" + JpUtilsString.trimToEmpty(checkedValues[0]) + "&mode=copy"
+		});		
+	});	
 	
 	$("#BTN_delete").on("click", function() {
 		if (listTable.getCheckedCount() == 0)
