--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -10,7 +10,8 @@
 	<div class="sub header"></div>
 </div>
 <form id="FORM_write" class="ui form" autocomplete="off" onsubmit="return false;">
-<input type="hidden" name="cpSeq" th:value="${credentialsPolicy.cpSeq}"/>
+<input type="hidden" id="cpSeq" name="cpSeq" th:value="${credentialsPolicy.cpSeq}"/>
+<input type="hidden" id="mode" name="mode" th:value="${mode}"/>
 <div class="ui segment">
 	<div class="ui one column grid">
 		<div class="column">
@@ -20,7 +21,7 @@
 	<div class="ui divider"></div>
 	<div class="field">
 		<label class="required">Name</label>
-		<input type="text" name="name" th:value="${credentialsPolicy.name}"/>
+		<input type="text" name="name" th:value="${credentialsPolicy.name}" class="uppercase"/>
 	</div>
 	<div class="field">
 		<label>Description</label>
@@ -36,7 +37,7 @@
 			<label>Use</label>
 		</div>
 	</div>
-	<div class="field">
+	<div class="field" th:if="${isShowFgDefault}">
 		<div class="ui checkbox">
 			<input type="checkbox" name="fgDefault" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.fgDefault == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
 			<label>Default</label>
@@ -183,6 +184,11 @@
 </form>
 <script>
 $(document).ready(function() {
+	if (JpUtilsString.equals($("#mode").val(), "copy"))
+	{
+		$("#cpSeq").val("");
+	};	
+	
 	$(".menu .item").tab();
 	$(".ui.checkbox").checkbox();
 	
@@ -270,7 +276,6 @@ $(document).ready(function() {
 	
 	$("#FORM_write").form(formValidCheck);
 	
-	
 	$(".BTN_save").on("click", function() {
 		if ($("#FORM_write").form("validate form"))
 		{
@@ -312,7 +317,11 @@ let formValidCheck = {
 					{
 						type: "empty",
 						prompt: "Please enter Name."
-					}
+					},
+					{
+						type: "checkName",
+						prompt: "The name is not available. Please enter another one."
+					}					
 				]
 			},
 			uMinLength: {
@@ -353,7 +362,31 @@ let formValidCheck = {
 			}
 		},
 		keyboardShortcuts: false
-	};
+};
+	
+$.fn.form.settings.rules.checkName = function() {
+	let isValid = false;
+	
+	JpUtilsAjax.get({
+		url: "/platform/mgmt/user/credentials/policy/check/valid_name",
+		data: { cpSeq: $("#cpSeq").val(), name: $("#FORM_write input[name=name]").val() },
+		global: false,
+		async: false,
+		success: function(data, textStatus, jqXHR)
+		{
+			let result = data.RESULT;
+			
+			console.log(result);
+			
+			if (result == "S")
+			{
+				isValid = true;
+			};
+		}
+	});
+
+	return isValid;	
+};	
 </script>
 </th:block>
 </html>
