--- a/src/main/resources/templates/platform/mgmt/conn_resource/view.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/view.html
@@ -11,6 +11,7 @@
 </div>
 <div class="ui one column grid">
 	<div class="column">
+		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
 	</div>
@@ -20,6 +21,7 @@
 <div class="ui divider"></div>
 <div class="ui one column grid">
 	<div class="column">
+		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
 	</div>
@@ -37,6 +39,10 @@ $(document).ready(function() {
 			$("#contentArea").html(new JpUiRender().render(data));
 		}
 	});
+	
+	$(".BTN_copyToCreate").on("click", function() {
+		document.location.href = JpUtilsPath.url("/platform/mgmt/conn_resource/write?scrSeq=" + $("#FORM_view input[name=scrSeq]").val() + "&mode=copy");
+	});		
 	
 	$(".BTN_modify").on("click", function() {
 		document.location.href = JpUtilsPath.url("/platform/mgmt/conn_resource/write?scrSeq=" + $("#FORM_view input[name=scrSeq]").val());
