--- a/src/main/resources/templates/platform/mgmt/user/user_group/view.html
+++ b/src/main/resources/templates/platform/mgmt/user/user_group/view.html
@@ -11,7 +11,8 @@
 </div>
 <div class="ui one column grid">
 	<div class="column">
-		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
+		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
+		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>		
 		<div class="ui teal button BTN_delete" style="display:none;"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
@@ -20,6 +21,7 @@
 <div class="ui divider"></div>
 <div class="ui one column grid">
 	<div class="column">
+		<div class="ui teal button BTN_copyToCreate"><i class="copy outline icon"></i> Copy To Create</div>
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 		<div class="ui teal button BTN_delete" style="display:none;"><i class="minus icon"></i> Delete</div>
 	</div>
@@ -58,6 +60,10 @@ $(document).ready(function() {
 	$(".BTN_modify").on("click", function() {
 		document.location.href = JpUtilsPath.url("/platform/mgmt/user/user_group/write?ugSeq=" + $("#ugSeq").val());
 	});
+	
+	$(".BTN_copyToCreate").on("click", function() {
+		document.location.href = JpUtilsPath.url("/platform/mgmt/user/user_group/write?ugSeq=" + $("#ugSeq").val() + "&mode=copy");
+	});	
 	
 	$(".BTN_delete").on("click", function() {
 		JpUiDimmer.confirm("Do you want to delete?", function() {
