--- a/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -19,6 +19,7 @@
 <div class="ui segment">
 	<form id="FORM_write" class="ui form" autocomplete="off" onsubmit="return false;">
 	<input type="hidden" id="ugSeq" name="ugSeq" th:value="${ugSeq}"/>
+	<input type="hidden" id="mode" name="mode" th:value="${mode}"/>
 	</form>
 </div>
 <div class="ui divider"></div>
@@ -30,16 +31,22 @@
 </div>
 <script>
 $(document).ready(function() {
+	let mode = "[[${mode}]]";
+	
 	JpUtilsAjax.get({
 		url: "/platform/mgmt/user/user_group/write/layout",
-		data: { ugSeq: $("#ugSeq").val() },
+		data: { ugSeq: $("#ugSeq").val(), mode: mode },
 		success: function(data, textStatus, jqXHR)
 		{
 			$("#FORM_write").html(new JpUiRender().render(data)).find(".ui.dropdown").dropdown({ minCharacters: 2, fullTextSearch: true });
 			
-			if ([[${userGroup.userCount}]] > 0)
+			if (JpUtilsString.notEquals(mode, "copy") && [[${userGroup.userCount}]] > 0)
 			{
 				$("#FORM_write input[name=name]").attr("readonly", true);
+			}
+			else
+			{
+				$("#FORM_write input[name=name]").addClass("uppercase");	
 			};
 			
 			$("select[name=country]").closest(".ui.dropdown").dropdown({
@@ -66,6 +73,10 @@ $(document).ready(function() {
 							{
 								type: "empty",
 								prompt: "Please input {name}."
+							},
+							{
+								type: "checkName",
+								prompt: "The name is not available. Please enter another one."
 							}
 						]
 					},
@@ -135,12 +146,41 @@ $(document).ready(function() {
 				}				
 			});
 		}
-	});	
+	});
+	
+	$.fn.form.settings.rules.checkName = function() {
+		let isValid = false;
+		
+		JpUtilsAjax.get({
+			url: "/platform/mgmt/user/user_group/check/valid_name",
+			data: { ugSeq: $("#ugSeq").val(), name: $("#FORM_write input[name=name]").val() },
+			global: false,
+			async: false,
+			success: function(data, textStatus, jqXHR)
+			{
+				let result = data.RESULT;
+				
+				console.log(result);
+				
+				if (result == "S")
+				{
+					isValid = true;
+				};
+			}
+		});
+
+		return isValid;	
+	};
 	
 	$(".BTN_save").on("click", function() {
 		if ($("#FORM_write").form("validate form"))
 		{
 			JpUiDimmer.show();
+			
+			if (JpUtilsString.equals(mode, "copy"))
+			{
+				$("#ugSeq").val("");
+			};
 			
 			JpUtilsAjax.post({
 				url: "/platform/mgmt/user/user_group/save",
