--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
@@ -150,7 +150,8 @@ $(function(){
 		{
 			if (selectedItems.length > 0)
 			{
-				opener.setSelectedItems(selectedItems);	
+				opener.setSelectedItems(selectedItems);
+				window.close();
 			};
 		}
 		catch (e) {}
