--- a/src/main/resources/templates/portal/iv/hq/parts/export/invoice/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/invoice/view.html
@@ -8,7 +8,7 @@
 		<div class="block-title" th:text="#{HQP_T_INVOICE_STATUS_DETAIL}"></div>
 		<div id="BTN_search" class="block-button-area">
 			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button>
-			<button id="BTN_packingInfo" type="button" th:text="#{HQP_B_PACKING_INFO}"></button>
+			<!-- button id="BTN_packingInfo" type="button" th:text="#{HQP_B_PACKING_INFO}"></button -->
 			<button id="BTN_back" type="button" th:text="#{HQP_B_BACK}"></button><!-- Back -->
 		</div>
 	</div>	
