--- a/src/main/resources/templates/portal/iv/board/popup/view2.html
+++ b/src/main/resources/templates/portal/iv/board/popup/view2.html
@@ -11,9 +11,12 @@
 <script th:src="@{/editor_html5/js/xfe_main.js}"></script>
 <style>
 .pop-bottom {
+	width:100%;
 	height:45px;
 	padding: 10px 5px 5px 10px;
-	background-color: #000;	
+	background-color: #000;
+	position:fixed;
+	bottom: 0px;
 }
 .pop-bottom label {
 	color:#fff;
