--- a/src/main/resources/templates/portal/iv/hq/parts/export/accounts/ap/schedule/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/accounts/ap/schedule/list.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="grid-info">
-		<div class="block-button-area">
+		<div class="block-total-area">
 			<span class="total-number" id="totalAmount"></span>
 		</div>
 		<div class="grid-total">
