--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/bottom.html
@@ -11,92 +11,4 @@
 	</div>
 </div>
 <!-- bottom.html end -->
-<div class="bt-gotop"><a href="#" class="gotop"><img th:src="@{/portal/iv/common/gotop.png}"></a></div>
-<script>
-/*
- * 공통 페이지
- */
-//품번 검색
-function _showPartSearch(partNo)
-{
-	Popup.open("[[${BASE_PATH}]]/info/popup/part_search?pPartNo=" + partNo, 700, 600);
-};
-
-//대체품 조회
-function _showSubPartList(partNo)
-{
-	Popup.open("[[${BASE_PATH}]]/info/popup/sub_part_list?pPartNo=" + partNo, 900, 500);
-};
-
-//부품 별 적용 모델
-function _showAppliedModelList(partNo)
-{
-	Popup.open("[[${BASE_PATH}]]/info/popup/applied_model_list?pPartNo=" + partNo, 600, 500);
-};
-
-//서비스불가사유 - MUL
-function _showNotServiableReason(partNo)
-{
-	Popup.open("[[${BASE_PATH}]]/info/popup/alternative_list?pPartNo=" + partNo, 800, 500);
-};
-
-//Download Grid
-function _gridDownload(grid, fileName)
-{
-	let gridFileDownload = new GridFileDownload(grid);
-
-	gridFileDownload.fileName = fileName;
-	gridFileDownload.excelDownload();				
-};
-
-//품번 자동완성
-function _setPartAutocomplete(target)
-{
-	$(target).autocomplete({
-		source: function(request, response) {
-			JpUtilsAjax.get({
-				url: "[[${BASE_PATH}]]/info/autocompete/data",
-				data: {	"pPartNo": $(target).val() },
-				success: function(data, textStatus, jqXHR)
-				{
-					let result = data.RESULT;
-					
-					if (JpUtilsObject.isNotNull(result))
-					{
-						response(
-								$.map(result, function(item) {
-									if (JpUtilsString.isNotEmpty(item.MATERIAL_TEXT))
-									{
-										return {
-											label: item.MATERIAL + " | " + item.MATERIAL_TEXT,
-											value: item.MATERIAL
-										}								
-									};
-								})
-						);					
-					};
-				}
-			});
-		},
-		//delay: 50,
-		minLength: 3
-	});
-};
-
-//자동 스크롤 탑
-$("body").scroll(function() {
-	if ($(this).scrollTop() > 200 )
-	{
-		$(".bt-gotop").fadeIn();
-	}
-	else
-	{
-		$(".bt-gotop").fadeOut();
-	};
-});
-
-$(".gotop").click(function() {
-	$("html, body").animate( { scrollTop : 0 }, 400);
-	return false;
-});
-</script>
+<div class="bt-gotop"><a href="#" class="gotop"><img th:src="@{/portal/img/iv/common/gotop.png}"></a></div>
