--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/index.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/index.html
@@ -38,5 +38,9 @@ ProgressBar.show();
 <!-- Start Bottom -->
 <th:block th:replace="portal/layout/iv/hq/parts/popup/fragments/bottom"></th:block>
 <!-- End Bottom -->
+
+<!-- Common javascript functions -->
+<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/common_func_js"></th:block>
+<!-- Common javascript functions -->
 </body>
 </html>
