--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -103,10 +103,6 @@ input {
 	box-sizing: border-box;
 }
 
-input.warn {
-	background-color: #db2828;
-}
-
 /* placeholder 스타일 지정 */
 input::placeholder {
   color: #dddddd;
@@ -256,6 +252,11 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 }
 
 .block-button-area {
+    display: inline-block;
+    vertical-align : middle;
+}
+
+.block-total-area {
     display: inline-block;
     vertical-align : middle;
 }
@@ -643,6 +644,10 @@ input.custom-ui[type="text"], input.custom-ui[type="number"]{
 input.custom-ui[type="text"].uppercase{
 	text-transform: uppercase; 
 }
+input.custom-ui[type="text"].warn{
+	background-color: #db2828;
+	color:#363636; 
+}
 input.custom-ui[type="text"]:read-only, input.custom-ui[type="number"]:read-only{
 	background-color: #cccccc;
 }
@@ -742,14 +747,23 @@ img.required {
 }
 
 /*--- Text style ------------------*/
-.text-alert {
-	color: red;
-}
 .hidden {
 	display: none;
 }
 .visible {
 	display: block;
+}
+.bold {
+	font-weight: bold;
+}
+.info {
+	color: #00a779;
+}
+.warn {
+	color: #db2828;
+}
+.normal {
+	color: #003081;
 }
 .text-ellipsis {
 	text-overflow: ellipsis;
