--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -956,7 +956,15 @@ $(function(){
 
 		ProgressBar.hide();
 		
-		$("#TBL_grid input[name=materialNo][value='']:first").focus();
+		JpUiForm.input.on.focus($("#TBL_grid input[name=materialNo][value='']:first"));
+		JpUiForm.input.on.select($("#TBL_grid input[name=orderQty]"), $("#TBL_grid input[name=materialNo]"));
+		
+		JpUiForm.input.on.enter($("#TBL_grid input[name=materialNo]"), function(item) {
+			let orderQtyObj = $(item).closest("tr").find("input[name=orderQty]");
+			
+			orderQtyObj.val(JpUtilsString.defaultString(orderQtyObj.val(), "1"));
+			doSimulation();
+		});
 	});
 });
 </script>
