--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
@@ -63,7 +63,6 @@
 	<div class="split-row"></div>
 	<div class="grid-info">
 		<div class="grid-total">
-			<div class="split"></div>
 			<span class="total-number" id="totalRows"></span>
 		</div>
 	</div>
@@ -94,6 +93,7 @@ $(function(){
 			{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"},
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},
 			{data: "SUBSEQ", 		title: "[[#{HQP_L_SUB_SEQ}]]"},
+			{data: "ZFETD",	 		title: "[[#{HQP_L_ETD}]]"},
 			{data: "LFIMG_DL", 		title: "[[#{HQP_L_AVAILABLE_QTY}]]"},
 			{data: "VRKME", 		title: "[[#{HQP_L_UOM}]]"},
 			{data: "STATUS", 		title: "[[#{HQP_L_STATUS}]]"},
@@ -105,7 +105,7 @@ $(function(){
 			{data: "AUDAT", 		title: "[[#{HQP_L_ORDER_DATE}]]"}
 		],
 		columnDefs: [
-			{targets: [4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16], className: "dt-body-center"}
+			{targets: [4, 5, 6, 7, 8, 9, 12, 13, 14, 15, 16, 17], className: "dt-body-center"}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/status/summary/list/data",
