--- a/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
+++ b/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
@@ -44,13 +44,14 @@
 	
 <script>
 $(function(){
+	_setDealerCodeAutocomplete($("#pName"), {
+		select: function(label, value, event) {
+			doSearch();
+		}
+	});
 
 	$tableObj = $("#TBL_grid").DataTable({
-		select: {
-			selector: 'td:not(.noselect)'	// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
-	    },
 		ordering: true, 
-		serverSide: false,
 		scrollY: 100,
 		columns : [
 			{// 컬럼에 checkbox 설정
